Made small spacing corrections.

--- a/src/PortfolioContainer/Home/Footer/Footer.css
+++ b/src/PortfolioContainer/Home/Footer/Footer.css
@@ -20,9 +20,19 @@
 
 /* Responsive styles*/
 
-@media only screen and (mas-width: 1110px) {
+@media only screen and (max-width: 1110px) {
     .footer-parent {
         display: flex;
         align-items: flex-end;
     }
+}
+@media only screen and (max-width: 450px) {
+    .footer-parent {
+        display: flex;
+        align-items: flex-end;
+    }
+    .footer-parent img {
+    max-width: 100%;
+    height: 30px;
+}
 }
