--- a/src/utilities/ScreenHeading/ScreenHeading.css
+++ b/src/utilities/ScreenHeading/ScreenHeading.css
@@ -14,7 +14,7 @@
 
 .screen-sub-heading {
     letter-spacing: 3px;
-    margin: 80px 0 18px 0;
+    margin: 10px 0 18px 0;
     font-size: 12px;
     color: var(--black);
 }
